...

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/tabMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp"
                android:src="@drawable/ic_menu"
                app:tint="@color/kn_text2" />
            <View
...
