...
                android:text="⌄"
                android:textColor="@color/kn_text2"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/menu_logout_row"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/kn_pill_gray"
            android:clickable="true"
...
